--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,38 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://kit.fontawesome.com/1ae27800dc.js" crossorigin="anonymous"></script>
+
+
   <meta charset="utf-8">
-  <title>MitPortfolio</title>
+  <title>La Même Bête</title>
   <base href="/">
+  <meta name="description" content="I am a builder with over ten years of experience as a software engineer and five years as a product manager leading interdisciplinary teams, promoting my client's business goals.">
+  <meta name="keywords" content="Moshe Borouchov, Product Manager, Software Engineer, User Research, Cornell Tech, Technion, UI, UX">
+  <meta name="author" content="Moshe Borouchov">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/fav/favicon-16x16.png">
+  <link rel="manifest" href="./assets/fav/site.webmanifest">
+  <link rel="mask-icon" href="./assets/fav/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="./assets/style/style.css">
   <link rel="stylesheet" href="./assets/style/animate.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,700,800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono|Space+Mono&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+  <script src="assets/js/blotter.min.js"></script>
+  <script src="assets/js/liquidDistortMaterial.js"></script>
 </head>
-<body>
+<body style="overflow-x: hidden;">
   <app-root></app-root>
 </body>
 </html>
